--- a/src/app.html
+++ b/src/app.html
@@ -8,5 +8,7 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<h1 class="font-serif text-2xl text-center">うすゆきどっとねっと</h1>
+		<h1 class="text-2xl text-center">こんばんわに</h1>
 	</body>
 </html>
