--- a/src/error.html
+++ b/src/error.html
@@ -4,14 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-        <title>%sveltekit.status% | うすゆきどっとねっと</title>
+		<title>%sveltekit.status% | うすゆきどっとねっと</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-        <h1 class="text-3xl mx-2 my-2 ">
-            %sveltekit.status% エラー
-        </h1>
-        <div class="flex mx-2 my-2 justify-center">
-        <p class="">%sveltekit.error.message%</p>
-        </div>
+		<h1 class="text-3xl mx-2 my-2">%sveltekit.status% エラー</h1>
+		<div class="flex mx-2 my-2 justify-center">
+			<p class="">%sveltekit.error.message%</p>
+		</div>
 	</body>
 </html>
