--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,13 @@
 <html lang="ja">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			href="%sveltekit.assets%/img/favicon/apple-touch-icon-180x180.png"
+		/>
+		<link rel="icon" type="image/png" href="%sveltekit.assets%/img/favicon/icon-192x192.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
