--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,17 @@
 		<link rel="icon" type="image/png" href="%sveltekit.assets%/img/favicon/icon-192x192.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VSEVR44V35"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-VSEVR44V35');
+		</script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
