--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- 
+	<!-- 
 ##   ##   #####   ##   ##  ##  ##   ##   ##  ###  ##   ####             ######    #####   ######   ######   #######   #####   ####      ####     #####
 ##   ##  ##   ##  ##   ##  ##  ##   ##   ##   ##  ##    ##               ##  ##  ##   ##   ##  ##  # ## #    ##   #  ##   ##   ##        ##     ##   ##
 ##   ##  #        ##   ##  ##  ##   ##   ##   ## ##     ##               ##  ##  ##   ##   ##  ##    ##      ## #    ##   ##   ##        ##     ##   ##
@@ -10,7 +10,12 @@
  #####    #####    #####    ####     #####   ###  ##   ####             ####      #####   #### ##   ####    ####      #####   #######   ####     ##### 
 -->
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
+		<meta name="robots" content="index, follow" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="format-detection" content="telephone=no" />
+		<meta name="viewport" content="width=device-width" />
+		<!-- favicon -->
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<link
 			rel="apple-touch-icon"
@@ -18,8 +23,9 @@
 			href="%sveltekit.assets%/img/favicon/apple-touch-icon-180x180.png"
 		/>
 		<link rel="icon" type="image/png" href="%sveltekit.assets%/img/favicon/icon-192x192.png" />
-		<meta name="viewport" content="width=device-width" />
+
 		%sveltekit.head%
+
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VSEVR44V35"></script>
 		<script>
