--- a/src/error.html
+++ b/src/error.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html lang="ja">
 	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta charset="UTF-8" />
+		<meta name="robots" content="index, follow" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="format-detection" content="telephone=no" />
 		<meta name="viewport" content="width=device-width" />
+		<!-- favicon -->
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			href="%sveltekit.assets%/img/favicon/apple-touch-icon-180x180.png"
+		/>
+		<link rel="icon" type="image/png" href="%sveltekit.assets%/img/favicon/icon-192x192.png" />
+
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VSEVR44V35"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-VSEVR44V35');
+		</script>
+
 		<title>%sveltekit.status% | うすゆきどっとねっと</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
