--- a/src/app.html
+++ b/src/app.html
@@ -24,6 +24,19 @@
 		/>
 		<link rel="icon" type="image/png" href="%sveltekit.assets%/img/favicon/icon-192x192.png" />
 
+		<!-- Google Fonts (自前よりgoogleから取ったほうが早い) -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Kaisei+Decol:wght@500&family=Kiwi+Maru:wght@500&display=swap"
+			rel="stylesheet"
+		/>
+		<!-- Material Icons -->
+		<!-- <link -->
+		<!-- 	rel="stylesheet" -->
+		<!-- 	href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" -->
+		<!-- /> -->
+
 		%sveltekit.head%
 
 		<!-- Google tag (gtag.js) -->
