--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="ja">
-	<!-- 
+  <!-- 
 ##   ##   #####   ##   ##  ##  ##   ##   ##  ###  ##   ####             ######    #####   ######   ######   #######   #####   ####      ####     #####
 ##   ##  ##   ##  ##   ##  ##  ##   ##   ##   ##  ##    ##               ##  ##  ##   ##   ##  ##  # ## #    ##   #  ##   ##   ##        ##     ##   ##
 ##   ##  #        ##   ##  ##  ##   ##   ##   ## ##     ##               ##  ##  ##   ##   ##  ##    ##      ## #    ##   ##   ##        ##     ##   ##
@@ -9,49 +9,43 @@
 ##   ##  ##   ##  ##   ##    ##     ##   ##   ##  ##    ##               ##      ##   ##   ##  ##    ##      ##      ##   ##   ##  ##    ##     ##   ##
  #####    #####    #####    ####     #####   ###  ##   ####             ####      #####   #### ##   ####    ####      #####   #######   ####     ##### 
 -->
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="robots" content="index, follow" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="format-detection" content="telephone=no" />
-		<meta name="viewport" content="width=device-width" />
-		<!-- favicon -->
-		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-		<link
-			rel="apple-touch-icon"
-			type="image/png"
-			href="%sveltekit.assets%/img/favicon/apple-touch-icon-180x180.png"
-		/>
-		<link rel="icon" type="image/png" href="%sveltekit.assets%/img/favicon/icon-192x192.png" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="robots" content="index, follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="viewport" content="width=device-width" />
+    <!-- favicon -->
+    <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      href="%sveltekit.assets%/img/favicon/apple-touch-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%sveltekit.assets%/img/favicon/icon-192x192.png"
+    />
 
-		<!-- Google Fonts (自前よりgoogleから取ったほうが早い) -->
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Kaisei+Decol:wght@500&family=Kiwi+Maru:wght@500&display=swap"
-			rel="stylesheet"
-		/>
-		<!-- Material Icons -->
-		<!-- <link -->
-		<!-- 	rel="stylesheet" -->
-		<!-- 	href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" -->
-		<!-- /> -->
+    %sveltekit.head%
 
-		%sveltekit.head%
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-VSEVR44V35"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VSEVR44V35"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag('js', new Date());
-
-			gtag('config', 'G-VSEVR44V35');
-		</script>
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+      gtag("config", "G-VSEVR44V35");
+    </script>
+  </head>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
+  </body>
 </html>
